RESOLVED FIXED201351
Assertion hit when saving to PDF from printing dialog
https://bugs.webkit.org/show_bug.cgi?id=201351
Summary Assertion hit when saving to PDF from printing dialog
Chris Dumez
Reported 2019-08-30 13:31:09 PDT
Assertion hit when saving to PDF from printing dialog: Thread 32 Crashed: 0 ??? 0x00000001158f143e 0 + 4656665662 1 com.apple.WebKit 0x000000011b68e11b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebKit 0x000000011be66026 WTF::WeakPtr<WebKit::WebPageProxy>::get() const + 166 (WeakPtr.h:103) 3 com.apple.WebKit 0x000000011c05b8f9 WebKit::WebFrameProxy::page() const + 25 (WebFrameProxy.h:70) 4 com.apple.WebKit 0x000000011c39dec0 -[WKPrintingView knowsPageRange:] + 512 (WKPrintingView.mm:394) 5 com.apple.AppKit 0x00007fff2ab4c25f -[NSView(NSPrinting2) _knowsPagesFirst:last:] + 176 6 com.apple.AppKit 0x00007fff2aee821b __59-[NSConcretePrintOperation(NSInternal) _validatePagination]_block_invoke + 226 7 com.apple.AppKit 0x00007fff2ab4c170 -[NSConcretePrintOperation(NSInternal) _validatePagination] + 92 8 com.apple.AppKit 0x00007fff2ab4c6de -[NSConcretePrintOperation(NSInternal) _firstPageNumber] + 22 9 com.apple.AppKit 0x00007fff2ab4c4d0 -[NSConcretePrintOperation(NSInternal) _validateJobPageNumbers] + 48 10 com.apple.AppKit 0x00007fff2aee846a -[NSConcretePrintOperation(NSInternal) _firstRenderPageNumber] + 22 11 com.apple.AppKit 0x00007fff2b1536c4 -[NSView(NSPrintingInternal) _printForCurrentOperation] + 83 12 com.apple.AppKit 0x00007fff2aee7213 -[NSConcretePrintOperation _renderView] + 214 13 com.apple.AppKit 0x00007fff2aee73f7 -[NSConcretePrintOperation _continueModalOperationToTheEnd:] + 95 14 com.apple.Foundation 0x00007fff2fc62072 __NSThread__start__ + 1064 15 libsystem_pthread.dylib 0x00007fff64b1cd76 _pthread_start + 125 16 libsystem_pthread.dylib 0x00007fff64b195d3 thread_start + 15
Attachments
Patch (2.32 KB, patch)
2019-08-30 13:33 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-08-30 13:33:26 PDT
WebKit Commit Bot
Comment 2 2019-08-30 14:46:01 PDT
Comment on attachment 377744 [details] Patch Clearing flags on attachment: 377744 Committed r249346: <https://trac.webkit.org/changeset/249346>
WebKit Commit Bot
Comment 3 2019-08-30 14:46:02 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 4 2019-08-30 14:46:44 PDT
Note You need to log in before you can comment on or make changes to this bug.